codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1587
expression: popup
---
  Select Approval Mode

› 1. Read Only (current)  Requires approval to edit files and run commands.
  2. Agent                Read and edit files, and run commands.
  3. Agent (full access)  Codex can edit files outside this workspace and run
                          commands with network access. Exercise caution when
                          using.

  ↑/k ↓/j to navigate, enter to confirm, esc to go back
