codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. Mock ACP Agent             Mock agent for testing purposes.
  2. Gemini 2.0 Flash Thinking  Google's experimental thinking model.
  3. Claude                     Anthropic's Claude via Agent Context Protocol.
  4. gpt-5.1-codex              Optimized for codex.
  5. gpt-5.1-codex-mini         Optimized for codex. Cheaper, faster, but
                                less capable.
  6. gpt-5.1                    Broad world knowledge with strong general
                                reasoning.

  Press enter to select reasoning effort, or esc to dismiss.
